Fix spacing for recipe form

--- a/app/styles/_recipe-form.sass
+++ b/app/styles/_recipe-form.sass
@@ -8,6 +8,7 @@
   overflow: auto
 
 .recipe-form
+  margin: 20px 0 35px 0
   padding: 5px 15px 20px 15px
   label
     font-family: 'Architects Daughter', 'sans-serif'
@@ -31,6 +32,7 @@
 .recipe-form__title
   @include dialogue-header
   font-family: 'Architects Daughter', 'sans-serif'
+  font-size: 30px
 
 .recipe-form__servings-group
   display: inline
